tests/ui/bitfield/flags_not_repr_u8.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/bitfield/flags_not_repr_u8.rs:5:1
  |
5 | #[bitfield::bitfield(16)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'Flags in field 0 must be #[repr(u8)]', $DIR/tests/ui/bitfield/flags_not_repr_u8.rs:5:1
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)
